More output plots. Recursive initial rho0.

--- a/Rb87-attempt.ipynb
+++ b/Rb87-attempt.ipynb
@@ -58665,8 +58665,17 @@
     "γ=0.05       # Transit relaxation\r\n",
     "Bvalues=[]\r\n",
     "absorb=[]\r\n",
+    "rotation=[]\r\n",
     "popEx=[]\r\n",
     "popGr=[]\r\n",
+    "ρ₀ =(\r\n",
+    "    dm(nlevelstate(rbD1,4))\r\n",
+    "    +dm(nlevelstate(rbD1,5))\r\n",
+    "    +dm(nlevelstate(rbD1,6))\r\n",
+    "    +dm(nlevelstate(rbD1,7))\r\n",
+    "    +dm(nlevelstate(rbD1,8))\r\n",
+    "    +5*dm(nlevelstate(rbD1,flyThrough))\r\n",
+    "    )/10\r\n",
     "for B=Bmin:Bstep:Bmax\r\n",
     "    H=identityoperator(σ[1])*0\r\n",
     "    for i=1:length(n2Fm)\r\n",
@@ -58679,16 +58688,16 @@
     "        H+= ΩR*dip[i]*(σ[i]+dagger(σ[i]))   # Hamiltonian\r\n",
     "    end\r\n",
     "        # Initial state\r\n",
-    "    ρ₀ =(\r\n",
-    "        dm(nlevelstate(rbD1,4))\r\n",
-    "        +dm(nlevelstate(rbD1,5))\r\n",
-    "        +dm(nlevelstate(rbD1,6))\r\n",
-    "        +dm(nlevelstate(rbD1,7))\r\n",
-    "        +dm(nlevelstate(rbD1,8))\r\n",
-    "        +5*dm(nlevelstate(rbD1,flyThrough))\r\n",
-    "        )/10\r\n",
+    "#    ρ₀ =(\r\n",
+    "#        dm(nlevelstate(rbD1,4))\r\n",
+    "#        +dm(nlevelstate(rbD1,5))\r\n",
+    "#        +dm(nlevelstate(rbD1,6))\r\n",
+    "#        +dm(nlevelstate(rbD1,7))\r\n",
+    "#        +dm(nlevelstate(rbD1,8))\r\n",
+    "#        +5*dm(nlevelstate(rbD1,flyThrough))\r\n",
+    "#        )/10\r\n",
     "    t_out, ρ_master = steady.master(H,J;rho0=ρ₀)\r\n",
-    "    obs1=3*(Γ/ΩR)*imag(expect(σ[1],ρ_master[2])\r\n",
+    "    obs1=3*(Γ/ΩR)*real(expect(σ[1],ρ_master[2])\r\n",
     "                        +expect(σ[2],ρ_master[2])\r\n",
     "                        +expect(σ[3],ρ_master[2])\r\n",
     "                        +expect(σ[4],ρ_master[2])\r\n",
@@ -58713,7 +58722,32 @@
     "                        -expect(σ[23],ρ_master[2])\r\n",
     "                        -expect(σ[24],ρ_master[2])\r\n",
     "                        )\r\n",
-    "    obs2=real(\r\n",
+    "    obs2=3*(Γ/ΩR)*real(expect(σ[1],ρ_master[2])\r\n",
+    "                        +expect(σ[2],ρ_master[2])\r\n",
+    "                        +expect(σ[3],ρ_master[2])\r\n",
+    "                        +expect(σ[4],ρ_master[2])\r\n",
+    "                        +expect(σ[5],ρ_master[2])\r\n",
+    "                        +expect(σ[6],ρ_master[2])\r\n",
+    "                        +expect(σ[7],ρ_master[2])\r\n",
+    "                        +expect(σ[8],ρ_master[2])\r\n",
+    "                        +expect(σ[9],ρ_master[2])\r\n",
+    "                        +expect(σ[10],ρ_master[2])\r\n",
+    "                        +expect(σ[11],ρ_master[2])\r\n",
+    "                        +expect(σ[12],ρ_master[2])\r\n",
+    "                        +expect(σ[13],ρ_master[2])\r\n",
+    "                        +expect(σ[14],ρ_master[2])\r\n",
+    "                        +expect(σ[15],ρ_master[2])\r\n",
+    "                        +expect(σ[16],ρ_master[2])\r\n",
+    "                        +expect(σ[17],ρ_master[2])\r\n",
+    "                        +expect(σ[18],ρ_master[2])\r\n",
+    "                        +expect(σ[19],ρ_master[2])\r\n",
+    "                        +expect(σ[20],ρ_master[2])\r\n",
+    "                        +expect(σ[21],ρ_master[2])\r\n",
+    "                        +expect(σ[22],ρ_master[2])\r\n",
+    "                        +expect(σ[23],ρ_master[2])\r\n",
+    "                        +expect(σ[24],ρ_master[2])\r\n",
+    "                        )\r\n",
+    "    obs3=real(\r\n",
     "        expect(proj[9],ρ_master[2])\r\n",
     "        +expect(proj[10],ρ_master[2])\r\n",
     "        +expect(proj[11],ρ_master[2])\r\n",
@@ -58723,7 +58757,7 @@
     "        +expect(proj[15],ρ_master[2])\r\n",
     "        +expect(proj[16],ρ_master[2])\r\n",
     "        )\r\n",
-    "        obs3=real(\r\n",
+    "        obs4=real(\r\n",
     "            expect(proj[1],ρ_master[2])\r\n",
     "            +expect(proj[2],ρ_master[2])\r\n",
     "            +expect(proj[3],ρ_master[2])\r\n",
@@ -58735,8 +58769,9 @@
     "            )\r\n",
     "    push!(Bvalues,B)\r\n",
     "    push!(absorb,obs1)\r\n",
-    "    push!(popEx,obs2)\r\n",
-    "    push!(popGr,obs3)\r\n",
+    "    push!(rotation,obs2)\r\n",
+    "    push!(popEx,obs3)\r\n",
+    "    push!(popGr,obs4)\r\n",
     "end"
    ]
   },
@@ -58746,7 +58781,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Plots.plot(Bvalues,popEx)"
+    "plot1=Plots.plot(Bvalues,popEx)\r\n",
+    "plot2=Plots.plot(Bvalues,popGr)\r\n",
+    "plot3=Plots.plot(Bvalues,absorb)\r\n",
+    "plot4=Plots.plot(Bvalues,rotation)\r\n",
+    "Plots.plot(plot1, plot2, plot3, plot4, layout = (2, 2), legend = false)"
    ]
   },
   {
