--- a/NMOR.ipynb
+++ b/NMOR.ipynb
@@ -9830,10 +9830,8 @@
    "name": "julia-1.6"
   },
   "language_info": {
-   "file_extension": ".jl",
-   "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.0"
+   "version": ""
   },
   "orig_nbformat": 3
  },
