Fixed problem with larmor freq calcs.

--- a/Rb87-attempt.ipynb
+++ b/Rb87-attempt.ipynb
@@ -58462,7 +58462,6 @@
    "source": [
     "nucI=3//2\r\n",
     "grJ=1//2\r\n",
-    "nucI=3//2\r\n",
     "exJ=1//2\r\n",
     "\r\n",
     "exFmax=nucI+exJ\r\n",
@@ -58551,43 +58550,43 @@
     "exF1=-0.625*hfsEx\r\n",
     "exF2=0.375*hfsEx\r\n",
     "Δ=1.0\r\n",
-    "hfsE=Dict(  (\"ground\",(1,1))=>-(grF1+grF2),\r\n",
-    "            (\"ground\",(1,0))=>-(grF1+grF2), \r\n",
-    "            (\"ground\",(1,-1))=>-(grF1+grF2),\r\n",
-    "            (\"ground\",(2,2))=>0, \r\n",
-    "            (\"ground\",(2,1))=>0,\r\n",
-    "            (\"ground\",(2,0))=>0,\r\n",
-    "            (\"ground\",(2,-1))=>0,\r\n",
-    "            (\"ground\",(2,-2))=>0,\r\n",
-    "            (\"excited\",(1,1))=>-(exF1+exF2),\r\n",
-    "            (\"excited\",(1,0))=>-(exF1+exF2), \r\n",
-    "            (\"excited\",(1,-1))=>-(exF1+exF2),\r\n",
-    "            (\"excited\",(2,2))=>-Δ, \r\n",
-    "            (\"excited\",(2,1))=>-Δ,\r\n",
-    "            (\"excited\",(2,0))=>-Δ,\r\n",
-    "            (\"excited\",(2,-1))=>-Δ,\r\n",
-    "            (\"excited\",(2,-2))=>-Δ,\r\n",
+    "hfsE=Dict(  (\"ground\",(1,1))=>grF1,\r\n",
+    "            (\"ground\",(1,0))=>grF1, \r\n",
+    "            (\"ground\",(1,-1))=>grF1,\r\n",
+    "            (\"ground\",(2,2))=>grF2, \r\n",
+    "            (\"ground\",(2,1))=>grF2,\r\n",
+    "            (\"ground\",(2,0))=>grF2,\r\n",
+    "            (\"ground\",(2,-1))=>grF2,\r\n",
+    "            (\"ground\",(2,-2))=>grF2,\r\n",
+    "            (\"excited\",(1,1))=>-Δ+exF1,\r\n",
+    "            (\"excited\",(1,0))=>-Δ+exF1, \r\n",
+    "            (\"excited\",(1,-1))=>-Δ+exF1,\r\n",
+    "            (\"excited\",(2,2))=>-Δ+exF2, \r\n",
+    "            (\"excited\",(2,1))=>-Δ+exF2,\r\n",
+    "            (\"excited\",(2,0))=>-Δ+exF2,\r\n",
+    "            (\"excited\",(2,-1))=>-Δ+exF2,\r\n",
+    "            (\"excited\",(2,-2))=>-Δ+exF2,\r\n",
     "            )\r\n",
-    "ωLGr1=-7000  # GHz/Tesla   Larmor frequency\r\n",
+    "ωLGr1=-7000  # MHz/Tesla   Larmor frequency\r\n",
     "ωLGr2=7000 \r\n",
-    "ωLEx1=-2300  # GHz/Tesla   Larmor frequency\r\n",
+    "ωLEx1=-2300  # MHz/Tesla   Larmor frequency\r\n",
     "ωLEx2=2300   \r\n",
-    "larmor=Dict((\"ground\",(1,1))=>ωLGr1,\r\n",
-    "            (\"ground\",(1,0))=>ωLGr1, \r\n",
-    "            (\"ground\",(1,-1))=>ωLGr1,\r\n",
-    "            (\"ground\",(2,2))=>ωLGr2, \r\n",
-    "            (\"ground\",(2,1))=>ωLGr2,\r\n",
-    "            (\"ground\",(2,0))=>ωLGr2,\r\n",
-    "            (\"ground\",(2,-1))=>ωLGr2,\r\n",
-    "            (\"ground\",(2,-2))=>ωLGr2,\r\n",
-    "            (\"excited\",(1,1))=>ωLEx1,\r\n",
-    "            (\"excited\",(1,0))=>ωLEx1, \r\n",
-    "            (\"excited\",(1,-1))=>ωLEx1,\r\n",
-    "            (\"excited\",(2,2))=>ωLEx2, \r\n",
-    "            (\"excited\",(2,1))=>ωLEx2,\r\n",
-    "            (\"excited\",(2,0))=>ωLEx2,\r\n",
-    "            (\"excited\",(2,-1))=>ωLEx2,\r\n",
-    "            (\"excited\",(2,-2))=>ωLEx2,\r\n",
+    "larmor=Dict((\"ground\",(1,1))=> 1.0*ωLGr1,\r\n",
+    "            (\"ground\",(1,0))=> 0*ωLGr1, \r\n",
+    "            (\"ground\",(1,-1))=> -1.0*ωLGr1,\r\n",
+    "            (\"ground\",(2,2))=> 2.0*ωLGr2, \r\n",
+    "            (\"ground\",(2,1))=> 1.0*ωLGr2,\r\n",
+    "            (\"ground\",(2,0))=> 0*ωLGr2,\r\n",
+    "            (\"ground\",(2,-1))=> -1.0*ωLGr2,\r\n",
+    "            (\"ground\",(2,-2))=> -2.0*ωLGr2,\r\n",
+    "            (\"excited\",(1,1))=> 1.0*ωLEx1,\r\n",
+    "            (\"excited\",(1,0))=> 0*ωLEx1, \r\n",
+    "            (\"excited\",(1,-1))=> -1.0*ωLEx1,\r\n",
+    "            (\"excited\",(2,2))=> 2.0*ωLEx2, \r\n",
+    "            (\"excited\",(2,1))=> 1.0*ωLEx2,\r\n",
+    "            (\"excited\",(2,0))=> 0*ωLEx2,\r\n",
+    "            (\"excited\",(2,-1))=> -1.0*ωLEx2,\r\n",
+    "            (\"excited\",(2,-2))=> -2.0*ωLEx2,\r\n",
     "            )\r\n",
     "Ω=1.0       # Rabi frequency\r\n",
     "Γ=1.0       # Natual linewidth\r\n",
@@ -58625,7 +58624,7 @@
     "    push!(proj,transition(rbD1,i,i))\r\n",
     "    push!(ωL,larmor[n2Fm[i]])\r\n",
     "    push!(detune,hfsE[n2Fm[i]])\r\n",
-    "    H += ( detune[i] + ωL[i]*0.001 )*proj[i] # diagonal part of Hamiltonian\r\n",
+    " #   H += ( detune[i] + ωL[i]*0.001 )*proj[i] # diagonal part of Hamiltonian\r\n",
     "    push!(J,sqrt(γ)*transition(rbD1,i,flyThrough))                            # Jump for fly-through relaxation out\r\n",
     "    push!(J,sqrt(γ/nGround)*transition(rbD1,flyThrough,i))                    # Jump for fly-through relaxation in \r\n",
     "    for j=1:length(n2Fm)\r\n",
@@ -58635,9 +58634,9 @@
     "    end\r\n",
     "end\r\n",
     "\r\n",
-    "for i=1:length(σ)\r\n",
-    "    H+= Ω*dip[i]*(σ[i]+dagger(σ[i])) # off-diagonal part of Hamiltonian\r\n",
-    "end\r\n",
+    "#for i=1:length(σ)\r\n",
+    "#    H+= Ω*dip[i]*(σ[i]+dagger(σ[i])) # off-diagonal part of Hamiltonian\r\n",
+    "#end\r\n",
     "\r\n",
     "# Initial state\r\n",
     "ρ₀ = (dm(nlevelstate(rbD1,4))\r\n",
